--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </head>
 <body>
     <h1>Celebrating a Special Day!</h1>
-    <img src="girl_image.jpg" alt="Cute Girl" width="300" height="400">
+    <img src="zunaira.jpeg" alt="Cute Girl" width="300" height="400">
     <div id="countdown"></div>
 
     <script>
