--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Girl's Birthday Countdown</title>
+    <title>Cute Birthday Girl</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
